@@ -79,7 +79,7 @@ public class FirstStrike extends BaseRune {
         }
 
         double statsDamage = playerDamage(shooter, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(shooter, "§7[Debug] §f[§3First Strike§f] (Projectile) Stats Damage = §d" + Math.ceil(statsDamage * 100) / 100.0);
         DebugLogger.debug(shooter, "§7[Debug] §f[§3First Strike§f] (Projectile) Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
@@ -93,7 +93,7 @@ public class FirstStrike extends BaseRune {
         }
 
         double statsDamage = playerDamage(attacker, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(attacker, "§7[Debug] §f[§3First Strike§f] (Melee) Stats Damage = §d" + statsDamage);
         DebugLogger.debug(attacker, "§7[Debug] §f[§3First Strike§f] (Melee) Target New HP = §d" + newHealth);
@@ -133,7 +133,7 @@ public class FirstStrike extends BaseRune {
 
         if (isActive && System.currentTimeMillis() < buffEndTime.getOrDefault(attackerUUID, 0L)) {
             double damageDealt = playerDamage(player, target) * TRUE_DAMAGE_PERCENT;
-            double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - damageDealt));
+            double newHealth = Math.clamp(livingTarget.getHealth() - damageDealt, 0, livingTarget.getMaxHealth());
             livingTarget.setHealth(newHealth);
             bonusDamageTracked.put(attackerUUID, tracked + damageDealt);
             spawnXPOrbs(player, livingTarget);
@@ -167,11 +167,11 @@ public class FirstStrike extends BaseRune {
                 );
             }
 
-            animateXPOrbs(attacker, target, targetLoc, attackerLoc);
+            animateXPOrbs(target, targetLoc, attackerLoc);
         });
     }
 
-    private void animateXPOrbs(Player attacker, LivingEntity target, Location targetLoc, Location attackerLoc) {
+    private void animateXPOrbs(LivingEntity target, Location targetLoc, Location attackerLoc) {
         if (plugin == null) return;
 
         final int[] tickCount = {0};
