@@ -73,7 +73,7 @@ public class LethalTempo extends StackingRune {
         }
 
         double statsDamage = playerDamage(shooter, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(shooter, "§7[Debug] §f[§eLethal Tempo§f] (Projectile) Stats Damage = §d" + Math.ceil(statsDamage * 100) / 100.0);
         DebugLogger.debug(shooter, "§7[Debug] §f[§eLethal Tempo§f] (Projectile) Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
@@ -87,7 +87,7 @@ public class LethalTempo extends StackingRune {
         }
 
         double statsDamage = playerDamage(attacker, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(attacker, "§7[Debug] §f[§eLethal Tempo§f] (Melee) Stats Damage = §d" + Math.ceil(statsDamage * 100) / 100.0);
         DebugLogger.debug(attacker, "§7[Debug] §f[§eLethal Tempo§f] (Melee) Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
@@ -111,7 +111,7 @@ public class LethalTempo extends StackingRune {
         switchTarget(player, targetUUID);
 
         if (state == RuneState.ACTIVE) {
-            double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - keystoneDamage(player, target, getStacks(player, targetUUID))));
+            double newHealth = Math.clamp(livingTarget.getHealth() - keystoneDamage(player, target, getStacks(player, targetUUID)), 0, livingTarget.getMaxHealth());
 
             DebugLogger.debug(player, "§7[Debug] §f[§eLethal Tempo§f] Keystone Damage = §d" + Math.ceil(keystoneDamage(player, target, getStacks(player, targetUUID)) * 100) / 100.0);
             DebugLogger.debug(player, "§7[Debug] §f[§eLethal Tempo§f] Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
