@@ -28,7 +28,7 @@ import net.kyori.adventure.text.Component;
 
 public class AfterShock extends BaseRune {
     private int EFFECT_DURATION_TICKS = 300;
-    private int ABSORPTION_LEVEL = 2;
+    private int ABSORPTION_LEVEL = 5;
     private int RESISTANCE_LEVEL = 2;
 
     int COOLDOWN_SECONDS = 45;
@@ -67,7 +67,7 @@ public class AfterShock extends BaseRune {
         }
 
         double statsDamage = playerDamage(shooter, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(shooter, "§7[Debug] §f[§aAfter Shock§f] (Projectile) Stats Damage = §d" + Math.ceil(statsDamage * 100) / 100.0);
         DebugLogger.debug(shooter, "§7[Debug] §f[§aAfter Shock§f] (Projectile) Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
@@ -81,7 +81,7 @@ public class AfterShock extends BaseRune {
         }
 
         double statsDamage = playerDamage(attacker, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(attacker, "§7[Debug] §f[§aAfter Shock§f] (Melee) Stats Damage = §d" + Math.ceil(statsDamage * 100) / 100.0);
         DebugLogger.debug(attacker, "§7[Debug] §f[§aAfter Shock§f] (Melee) Target New HP = §d" + Math.ceil(newHealth * 100) / 100.0);
