@@ -80,12 +80,14 @@ public class GraspOfTheUndying extends StackingRune {
         }
 
         double statsDamage = playerDamage(shooter, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(shooter, "§7[Debug] §f[§aGrasp Of The Undying§f] (Projectile) Stats Damage = §d" + statsDamage);
         DebugLogger.debug(shooter, "§7[Debug] §f[§aGrasp Of The Undying§f] (Projectile) Target New HP = §d" + newHealth);
 
         livingTarget.setHealth(newHealth);
+
+        onCombat(shooter);
     }
 
     public void onAttack(Player attacker, Entity target) {
@@ -94,14 +96,14 @@ public class GraspOfTheUndying extends StackingRune {
         }
 
         double statsDamage = playerDamage(attacker, target);
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - statsDamage));
+        double newHealth = Math.clamp(livingTarget.getHealth() - statsDamage, 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(attacker, "§7[Debug] §f[§aGrasp Of The Undying§f] (Melee) Stats Damage = §d" + statsDamage);
         DebugLogger.debug(attacker, "§7[Debug] §f[§aGrasp Of The Undying§f] (Melee) Target New HP = §d" + newHealth);
 
         livingTarget.setHealth(newHealth);
 
-        activateGraspOfTheUndying(attacker, target);
+        onCombat(attacker);
     }
 
     private void activateGraspOfTheUndying(Player player, Entity target) {
@@ -132,7 +134,7 @@ public class GraspOfTheUndying extends StackingRune {
         }
 
         int absorptionHearts = totalAbsorptionHearts.getOrDefault(playerUUID, 0) / 2;
-        double newHealth = Math.max(0, Math.min(livingTarget.getMaxHealth(), livingTarget.getHealth() - (playerDamage(player, target) * absorptionHearts * 0.2)));
+        double newHealth = Math.clamp(livingTarget.getHealth() - (playerDamage(player, target) * absorptionHearts * 0.2), 0, livingTarget.getMaxHealth());
 
         DebugLogger.debug(player, "§7[Debug] §f[§aGrasp Of The Undying§f] Keystone Damage = §d" + (playerDamage(player, target) * absorptionHearts) * 0.2);
         DebugLogger.debug(player, "§7[Debug] §f[§aGrasp Of The Undying§f] Target New HP = §d" + newHealth);
